<resources>
    <string name="lable_image_quality_threshold">Image Quality Threshold</string>
    <string name="lable_user_id">User ID</string>
    <string name="lable_user_first_name">FirstName</string>
    <string name="lable_user_last_name">LastName</string>
    <string name="btn_start_enroll">Start Enroll</string>
    <string name="btn_stop_enroll">Stop Enroll</string>
    <string name="lable_list_user_id">User ID</string>
    <string name="lable_list_user_first_name">First Name</string>
    <string name="lable_list_user_last_name">Last Name</string>
    <string name="lable_list_user_finger_position">Finger Position</string>
    <string name="no_enrolled_users">No enrolled users</string>
    <string name="btn_import_user">Import User</string>
    <string name="btn_remove_user">Remove User</string>
    <string name="btn_remove_all">Remove All</string>
    <string name="select_file">Select File</string>
    <string name="lable_finger_position">Finger position</string>
    <string name="app_name">Mobile Banking</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello">Hello EasyMa</string>
    <string name="setting">Setting</string>
    <string name="searchdevice">Search Device</string>
    <string name="action_search">Search</string>
    <string name="monitor">Monitor</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="uri">http://www.amtechtechnologies.com</string>
    <string name="message">Are you sure You Want to Exit?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="text_print_demo">Print Test</string>
    <string name="text_print_receipt">Print Collection Receipt</string>
    <string name="text_connect">Connect</string>
    <string name="text_disconnect">Diconnect</string>
    <string name="text_enable_bluetooth">Enable Bluetooth</string>
    <string name="text_disable_bluetooth">Disable Bluetooth</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Android Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">GCM: device successfully registered!</string>
    <string name="gcm_unregistered">GCM: device successfully unregistered!</string>
    <string name="gcm_message">GCM: you got message!</string>
    <string name="gcm_error">GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">Demo Server: successfully added device!</string>
    <string name="server_unregistered">Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="text_scan_devices">Scan Devices</string>
    <string name="lable_identify_threshold">Identify Threshold</string>
    <string name="btn_start_identify">Start Identify</string>
    <string name="btn_stop_identify">Stop Identify</string>
    <string name="lable_list_rank">Rank</string>
    <string name="lable_list_similarity">Similarity</string>
    <string name="no_results">No results</string>
    <string-array name="tabs_name">
        <item>Capture</item>
        <item>Enroll</item>
        <item>Verify</item>
        <item>Identify</item>
        <item>Device Info</item>
    </string-array>
    <string name="msg_click_open_device_button">Click Open Device Button</string>
    <string name="msg_select_a_finger">Select a finger!</string>
    <string name="lable_auto_save">Auto Save</string>
    <string name="lable_storage_path">Storage Path</string>
    <string name="lable_file_path">/sdcard/AratekTrustfinger/FingerData</string>
    <string name="lable_feature_format">Feature Format</string>
    <string name="lable_image_quality">Image Quality</string>
    <string name="lable_image_format">Image Format</string>
    <string name="lable_compression">Compression</string>
    <string name="btn_select_file_path">…</string>
    <string name="btn_start_capture">Start Capture</string>
    <string name="btn_stop_capture">Stop Capture</string>
    <string name="lable_check_in_local_db">Check in local database(select a user)</string>
    <string name="lable_file">File</string>
    <string name="lable_security_level">Security Level</string>
    <string name="btn_start_verify">Start Verify</string>
    <string name="btn_stop_verify">Stop Verify</string>
    <string name="lable_manufacturer">Manufacturer :</string>
    <string name="lable_device_id">Device ID :</string>
    <string name="lable_firmware_version">F/W Version :</string>
    <string name="lable_serial_number">Serial # :</string>
    <string name="lable_image_width">Image Width :</string>
    <string name="lable_image_height">Image Height :</string>
    <string name="lable_image_dpi">Image DPI :</string>
    <string name="lable_model">Model :</string>
    <string name="lable_web_site">http://www.aratek.co\nAratek Biometrics Technology Co.,Ltd.</string>
    <string name="text_stop_scan">Scan Devices</string>
    <string name="text_list_paired_devices">Paired Devices</string>
    <string name="text_list_devices">List of Devices</string>
    <string name="text_pair">Pair</string>
    <string name="open">Open Bluetooth</string>
    <string name="close">Close Bluetooch</string>
    <string name="allowdiscoverable">Allow Discoverable</string>
    <string name="bluetoothmessage">Your bluetooch device is disable, please make it
		enable first.</string>
    <string name="strreturn">Set Language</string>
    <string name="scaning">Scanning...</string>
    <string name="nodevice">There isn\'t bluetooch devices!</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="hexview">View as Hex</string>
    <string name="hexsend">Send as Hex</string>
    <string name="username">Username :</string>
    <string name="password">Password :</string>
    <string name="user_details">User Details</string>
    <string name="idnos">Username :</string>
    <string name="phoneno">Password :</string>
    <string name="pinnum">User Details</string>
    <string name="firstname">First Name:</string>
    <string name="lastname">Last Name:</string>
    <string name="title_activity_create_user">CreateUserActivity</string>
    <string name="action_settings">Settings</string>
    <string name="selectonedevice">select device to connect</string>
    <string name="version">version:1.0.1</string>
    <string name="about1">easymApp is an android application of a very high technology of milk collection from the field using Bluetooth scale and printer, thus reducing the energy of a farmer of taking the milk to the dairy firm, that might be too or where transportation means is a problem.

How it works.
A default admin must login first, this authentication is to ensure highest level of security for precise collection and proper procedure for the payment of the milk delivery.
After the default admin logs in, and whose logins are only know by the developer or the super admin or the supervisor of the firm. The supervisor or the super admin shiuld be given the logins to be able to add more users of the application who are now authenticated to do the milk collection from the farmers places.
Collection
After successful login as an authenticated user, they will use the collection button that takes them to daily collection or current collection. The daily collection is used to produce the report all the collection done in a particular day, while the current collection is for the field collection that is to collect the milk when the farmer delivers the milk.
This current collection button takes you to searching of the scale device, that is to be discovered by the phone via the Bluetooth.</string>
    <string name="about_us">About us</string>
    <string name="about2">We believe that everyone should have the tool,
		hardware platform and resource to play with cool electronic gadgetry
		.Our goal is to fuels ubiquitous innovation with fast prototyping
		modules, convenient development platform at low price, even
		customizable solutions.</string>
    <string name="ioexception">Connect failed!</string>
    <string name="wait">Wait to connect the device...</string>
    <string name="number">Please input the valid hex character.
		ex:\'0-9\',\'A-F\',\'a-f\'.</string>
    <string name="newline">Send as New Line</string>
    <string name="create_user_account">Create User Account</string>
    <string name="container_prompt">Choose a container</string>
    <string name="container_comp">Choose a company</string>
    <string name="time_prompt">Choose a Time</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bucket">1.5 Kg</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_fingerprint">Fingureprint Authodication</string>
    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>
    <string name="title_activity_home">Fingerprint</string>
    <string name="activity_home_desc">You have successfully logged in with fingerprint authentication</string>
    <string name="activity_home_note">Close and re-open the app to see the fingerprint auth screen again</string>
    <string name="title_activity_agent_member">AgentMember</string>
    <string name="lable_device_type">Device Type</string>
    <string name="lable_usb_device">USB Device</string>
    <string name="lable_enabled_led">Enabled LED</string>
    <string name="lable_anti_spoofing">Anti Spoofing</string>
    <string name="btn_open_device">Open Device</string>
    <string name="btn_close_device">Close Device</string>
    <string name="sp_device_type_auto">AUTO</string>
    <string name="sp_device_type_a400">A400</string>
    <string name="sp_device_type_a600">A600</string>
    <string name="sp_usb_device_auto">AUTO</string>
    <string-array name="device_type">
        <item>AUTO</item>
        <item>A400</item>
        <item>A600</item>
    </string-array>
    <string-array name="language">
        <item>English</item>
        <item>Chinese</item>
    </string-array>
    <string-array name="time_arrays">
        <item>AM</item>
        <item>PM</item>
        <item>PM2</item>
    </string-array>
    <string-array name="image_format">
        <item>BMP</item>
        <item>WSQ</item>
        <item>RAW</item>
        <item>ISO 19794-4:2005</item>
        <item>ANSI 381-2004</item>
    </string-array>
    <string-array name="feature_format">
        <item>Aratek Bione</item>
        <item>ISO 19794-2:2005</item>
        <item>ANSI 378-2004</item>
    </string-array>
    <string-array name="shift_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="branch_array">
        <item>0</item>
        <item>1.5</item>

    </string-array>
</resources>