<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_device_type"
                    style="@style/LableTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:paddingBottom="5dp"
                    android:text="@string/lable_device_type"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/sp_device_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/device_type" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_usb_device"
                    style="@style/LableTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/lable_usb_device"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/sp_usb_device"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_open_device"
            style="@style/MyButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/btn_open_device" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chk_enabled_led"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/lable_enabled_led"
            android:textColor="@drawable/chk_text_selector"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/chk_anti_spoofing"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:checked="false"
            android:enabled="false"
            android:text="@string/lable_anti_spoofing"
            android:textColor="@drawable/chk_text_selector"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>